# snow-py-0to1

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
src/numpy_demo/: numpy_1.py  numpy_2.py
src/snow_py_0to1/: __init__.py  cmdline.py  log.py
src/snow_py_0to1/ai/: ai_api_openai.py  demo_ai_openai.py  demo_ai_rag.py  file_splitter.py  pdf_markdown_file_loader.py  vector_stores.py
src/snow_py_0to1/ai/knowledge_base/: 人工智能基础.md  大语言模型.txt
src/snow_py_0to1/config/: __init__.py  settings.yml
tests/: __init__.py  test_cmdline.py  test_log.py  test_version.py
