[tool.poetry]
name = "snow_py_0to1"
version = "0.0.1"
description = "call the ai api to do something"
readme = "README.md"
authors = ["jackji <jackji@example.com>"]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "^3.1.12"
click = "^8.1.3"
openai = "^1.101.0"
numpy = "^2.3.2"
dotenv = "^0.9.9"
langchain-text-splitters = "^0.3.9"
langchain-core = "^0.3.74"
langchain-community = "^0.3.27"
matplotlib = "^3.10.5"
scipy = "^1.16.1"
pymupdf = "^1.26.4"
unstructured = "^0.18.14"
chromadb = "^1.0.20"
tiktoken = "^0.11.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
isort = "^5.12.0"
pytest = "^7.3.1"
tox = "^4.5.2"
mkdocs = "^1.4.3"
mkdocs-material = "^8.5.11"
pytest-pylint = "^0.19.0"
pre-commit = "^3.3.2"

[tool.poetry.scripts]
snow_py_0to1 = "snow_py_0to1.cmdline:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
testpaths = "tests"
python_files = "tests.py test_*.py *_tests.py"

[tool.pylint.design]
max-line-length = 120
